# bm_canopen_slave

./: .gitmodules  .mxproject  CMakeLists.txt  README.md  bm_lesson_canopen.ioc
Core/Inc/: co_config_custom.h  stm32f1xx_hal_conf.h
Core/Src/: co_can_driver.c  co_timers_driver.c  main.c  stm32f1xx_hal_msp.c  syscalls.c
cmake/stm32cubemx/: CMakeLists.txt
objdict/: CMakeLists.txt  bm_node.c  bm_node.eds  bm_node.h  bm_node.od
